src/objects/PM_Project__c.object
<CustomObject>
    <description>Astrum PM 2.0 Project Object</description>
    <fields>
        <fullName>Age__c</fullName>
        <formula>(TODAY() - MOD( TODAY() - DATE(1900, 1, 6), 7)) -  Sale_Date_Week_Start__c</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Comment_Check__c</fullName>
        <label>Approval Comment Check</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <formula>Sales_Order__r.Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Final_Documents__c</fullName>
        <label>Approval Final Documents</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Utility_Interconnect_Part_1__c</fullName>
        <label>Approved Utility Interconnect Part 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Utility_Interconnect_Part_2__c</fullName>
        <label>Approved Utility Interconnect Part 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Astrum_Office__c</fullName>
        <formula>TEXT(Sales_Order__r.Property__r.Astrum_Office__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Astrum Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Map__c</fullName>
        <label>Branch Map</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Submitted__c</fullName>
        <label>Building Permit Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Building_Permit__c</fullName>
        <label>Building Permit Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CR_Status__c</fullName>
        <label>CR Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Central_Inverter_Model__c</fullName>
        <description>Inverter Type -&gt; Central -&gt; Model</description>
        <label>Central Inverter Model</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Central_Inverter_Type__c</fullName>
        <description>Inverter Type -&gt; Central -&gt; Make</description>
        <label>Central Inverter Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Pending_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Change Pending Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compliance_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lease Administration, Incentives Administration, and Documentation</description>
        <inlineHelpText>Lease Administration, Incentives Administration, and Documentation</inlineHelpText>
        <label>Compliance Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PM_Projects_Compliance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Constellation_Tranche__c</fullName>
        <description>Tranche Number for Constellation Leases</description>
        <inlineHelpText>Tranche Number for Constellation Leases</inlineHelpText>
        <label>Constellation Tranche</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Action_Notes__c</fullName>
        <label>Customer Action Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Action_Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Action Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Handoff__c</fullName>
        <label>Customer Care Handoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Until_Install__c</fullName>
        <formula>Install_Week_Start__c  - (TODAY() - MOD( TODAY() - DATE(1900, 1, 6), 7))</formula>
        <label>Days Until Install</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Final_SREC_Approval__c</fullName>
        <description>The number of Days to Final SREC Approval. Needs “SREC Application Package” value in order to calculate.

IF “SREC Application Package” = &lt;Null&gt;, THEN “Days to Final SREC
Approval” = &lt;null&gt;,

IF “SREC Docs” = &lt;null&gt;, THEN “Days to Final SREC Approval” =
[Today’s Date] – “SREC Application Package”

IF “SREC Docs” = &lt;value&gt; THEN “Days to Final SREC Approval” =
“SREC_Docs__c” – “SREC Application Package”</description>
        <formula>IF( ISBLANK(SREC_Application_Package__c), 
   NULL, 

/*ELSE*/ 
   IF( ISBLANK(SREC_Docs__c), 
      TODAY() - SREC_Application_Package__c, 
   /*ELSE*/ 
      SREC_Docs__c - SREC_Application_Package__c
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of Days to Final SREC Approval. Needs “SREC Application Package” value in order to calculate.</inlineHelpText>
        <label>Days to Final SREC Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Final_SREC_Submission__c</fullName>
        <description>The number of Days to Final SREC Submission. Needs “Approved Utility Interconnect Part 2” value in order to calculate.

IF “Approved Utility Interconnect Part 2” = &lt;Null&gt;, THEN “Days to
Final SREC Submission” = &lt;null&gt;,

IF “SREC Application Package” = &lt;null&gt;, THEN “Days to Final SREC
Submission” = [Today’s Date] – “Approved Utility Interconnect Part 2”

IF “SREC Application Package” = &lt;value&gt; THEN “Days to Final SREC
Submission” = “SREC Application Package” – “Approved Utility Interconnect
Part 2”</description>
        <formula>IF( ISBLANK(Approved_Utility_Interconnect_Part_2__c), 
   NULL, 

/*ELSE*/ 
   IF( ISBLANK(SREC_Application_Package__c), 
      TODAY() - Approved_Utility_Interconnect_Part_2__c, 
   /*ELSE*/ 
      SREC_Application_Package__c - Approved_Utility_Interconnect_Part_2__c
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of Days to Final SREC Submission. Needs “Approved Utility Interconnect Part 2” value in order to calculate.</inlineHelpText>
        <label>Days to Final SREC Submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Finance_Final_Approval__c</fullName>
        <description>The number of Days to Finance Final Approval. Needs “Approved Utility Interconnect Part 2” value in order to calculate.

IF “Approved Utility Interconnect Part 2” = &lt;Null&gt;, THEN “Days to
Finance Final Approval” = &lt;null&gt;,

IF “Lease Final Package Approved” = &lt;null&gt;, THEN “Days to Finance
Final Approval” = [Today’s Date] – “Approved Utility Interconnect Part 2”

IF “Lease Final Package Approved” = &lt;value&gt; THEN “Days to Finance
Final Approval” = “Lease Final Package Approved” – “Approved Utility
Interconnect Part 2”</description>
        <formula>IF( ISBLANK(Approved_Utility_Interconnect_Part_2__c), 
   NULL, 

/*ELSE*/ 
   IF( ISBLANK(Lease_Final_Package_Approved__c), 
      TODAY() - Approved_Utility_Interconnect_Part_2__c, 
   /*ELSE*/ 
      Lease_Final_Package_Approved__c - Approved_Utility_Interconnect_Part_2__c
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of Days to Finance Final Approval. Needs “Approved Utility Interconnect Part 2” value in order to calculate.</inlineHelpText>
        <label>Days to Finance Final Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Finance_Substantial_Approval__c</fullName>
        <description>The number of Days to Finance Substantial Approval. Needs “Work Completed” value in order to calculate.

IF “Work Completed” = &lt;Null&gt;, THEN “Days to Finance Substantial
Approval” = &lt;null&gt;,

IF “Lease Substantially Complete” = &lt;null&gt;, THEN “Days to Finance
Substantial Approval” = [Today’s Date] – “Work Completed”.

IF “Lease Substantially Complete” = &lt;value&gt; THEN “Days to Finance
Substantial Approval” = “Lease Substantially Complete” – “Work Completed”</description>
        <formula>IF( ISBLANK(Work_Completed__c),
   NULL,

/*ELSE*/
   IF( ISBLANK(Lease_Substantially_Complete__c),
      TODAY() - Work_Completed__c,
   /*ELSE*/
      Lease_Substantially_Complete__c - Work_Completed__c
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of Days to Finance Substantial Approval. Needs “Work Completed” value in order to calculate.</inlineHelpText>
        <label>Days to Finance Substantial Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Initial_SREC_Submission__c</fullName>
        <description>The number of Days to Initial SREC Submission.

IF “NJ SREC Application Package” = &lt;null&gt;, THEN “Days to Initial
SREC Submission” = [Today’s Date] – “Sales Order: Created Date”

IF “NJ SREC Application Package” = &lt;value&gt; THEN “Days to Initial
SREC Submission” = “NJ SREC Application Package” – “Sales Order: Created
Date”</description>
        <formula>IF( ISBLANK(NJ_SREC_Application_Package__c), 
   TODAY() - DATEVALUE(Sales_Order__r.CreatedDate), 

/*ELSE*/ 
   NJ_SREC_Application_Package__c - DATEVALUE(Sales_Order__r.CreatedDate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of Days to Initial SREC Submission.</inlineHelpText>
        <label>Days to Initial SREC Submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Notice_to_Construct__c</fullName>
        <description>Needs Sales Order Approval Date in order to calculate.

IF “Sales Order Approval Date” = &lt;Null&gt;, THEN “Days to Notice to
Construct” = &lt;null&gt;,

IF “Lease Design Approved” = &lt;null&gt;, THEN “Days to Notice to
Construct” = [Today’s Date] – “Sales Order Approval Date”

IF “Lease Design Approved” = &lt;value&gt; THEN “Days to Notice to
Construct” = “Lease Design Approved” – “Sales Order Approval Date”</description>
        <formula>IF( ISBLANK(Sales_Order__r.Sales_Order_Approval_Date__c),
   NULL,

/*ELSE*/
   IF( ISBLANK(Lease_Design__c),
      TODAY() - Sales_Order__r.Sales_Order_Approval_Date__c,
   /*ELSE*/
      Lease_Design__c - Sales_Order__r.Sales_Order_Approval_Date__c
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of Days to Notice to Construct. Needs “Sales Order Approval Date” value in order to calculate.</inlineHelpText>
        <label>Days to Notice to Construct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Rebate_Completion__c</fullName>
        <description>The number of Days to Rebate Completion. Needs “Approved Utility Interconnect Part 2” value in order to calculate.

IF “Approved Utility Interconnect Part 2” = &lt;Null&gt;, THEN “Days to
Rebate Completion” = &lt;null&gt;,

IF “Grant Completion Approved Part 2” = &lt;null&gt;, THEN “Days to
Rebate Completion” = [Today’s Date] – “Approved Utility Interconnect Part 2”

IF “Grant Completion Approved Part 2” = &lt;value&gt; THEN “Days to
Finance Final Approval” = “Grant Completion Approved Part 2” – “Approved
Utility Interconnect Part 2”</description>
        <formula>IF( ISBLANK(Approved_Utility_Interconnect_Part_2__c),
   NULL,

/*ELSE*/
   IF( ISBLANK(Grant_Completion_Approved_Part_2__c),
      TODAY() - Approved_Utility_Interconnect_Part_2__c,
   /*ELSE*/
      Grant_Completion_Approved_Part_2__c - Approved_Utility_Interconnect_Part_2__c 
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of Days to Rebate Completion. Needs “Approved Utility Interconnect Part 2” value in order to calculate.</inlineHelpText>
        <label>Days to Rebate Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Reservation_Approval__c</fullName>
        <description>The number of Days to Reservation Approval. Needs “Grant Reservation Submitted” value in order to calculate.

IF “Grant Reservation Submitted” = &lt;null&gt;, THEN “Days to
Reservation Approval” = &lt;null&gt;

IF “Grant Reservation Approved” = &lt;null&gt;, THEN “Days to
Reservation Approval” = [Today’s Date] – “Sales Order: Created Date”

IF “Grant Reservation Approved” = &lt;value&gt; THEN “Days to
Reservation Approval” = “Grant Reservation Approved” – “Sales Order:
Created Date”</description>
        <formula>IF( ISBLANK(Grant_Reservation_Submitted__c), 
   NULL, 

/*ELSE*/ 
   IF( ISBLANK(Grant_Documents__c), 
      TODAY() - DATEVALUE(Sales_Order__r.CreatedDate),
   /*ELSE*/ 
      Grant_Documents__c - DATEVALUE(Sales_Order__r.CreatedDate)
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of Days to Reservation Approval. Needs “Grant Reservation Submitted” value in order to calculate.</inlineHelpText>
        <label>Days to Reservation Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Reservation_Submission__c</fullName>
        <description>The number of Days to Reservation Submission.

IF “Grant Reservation Submitted” = &lt;null&gt;, THEN “Days to Rebate
Submission” = [Today’s Date] – “Sales Order: Created Date”

IF “Grant Reservation Submitted” = &lt;value&gt; THEN “Days to Rebate
Submission” = “Grant Reservation Submitted” – “Sales Order: Created Date”</description>
        <formula>IF( ISBLANK(Grant_Reservation_Submitted__c),
   TODAY() - DATEVALUE(Sales_Order__r.CreatedDate),
/*ELSE*/
   Grant_Reservation_Submitted__c - DATEVALUE(Sales_Order__r.CreatedDate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of Days to Reservation Submission.</inlineHelpText>
        <label>Days to Reservation Submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drivers_Licenses__c</fullName>
        <label>Drivers Licenses</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Electrical Designer associated with this PM Project.</description>
        <inlineHelpText>Electrical Designer associated with this PM Project.</inlineHelpText>
        <label>Electrical Designer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PM_Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Electrical_Permit_Submitted__c</fullName>
        <label>Electrical Permit Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Permit__c</fullName>
        <label>Electrical Permit Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Review_Submitted__c</fullName>
        <label>Electrical Review Information Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Review_Submitted_to_Approved__c</fullName>
        <description>Electrical Review Submitted to Electrical Review Approved</description>
        <formula>Electrical_Review__c - Electrical_Review_Submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Electrical Review Submitted to Electrical Review Approved</inlineHelpText>
        <label>Electrical Review Submitted to Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Review__c</fullName>
        <label>Electrical Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engineering_Permit_Design_Package__c</fullName>
        <label>Engineering Permit Design Package</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engineering_Review__c</fullName>
        <label>Engineering Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enphase_EUI64_Code__c</fullName>
        <description>For Enphase revenue grade meter</description>
        <label>Enphase EUI64 Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enphase_Install_Code__c</fullName>
        <description>For Enphase revenue grade meter</description>
        <label>Enphase Install Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enphase_Map__c</fullName>
        <label>Enphase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Structural_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The external firm who will be the structural engineer</description>
        <inlineHelpText>The external firm who will be the structural engineer</inlineHelpText>
        <label>External Structural Engineer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PM Projects</relationshipLabel>
        <relationshipName>PM_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Associate__c</fullName>
        <formula>Sales_Order__r.Finance_Associate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Associate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Comments__c</fullName>
        <description>Comments related to the financing for the project.</description>
        <inlineHelpText>Comments related to the financing for the project.</inlineHelpText>
        <label>Finance Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Finance_Status__c</fullName>
        <formula>IF( AND(ISNULL( Grant_Documents__c ),
       ( OR(  CONTAINS( Sales_Order__r.Financing_Option__c, &quot;CT Solar Loan&quot;),
              CONTAINS( Sales_Order__r.Financing_Option__c, &quot;CT Smart E-Loan&quot;),
              CONTAINS( Sales_Order__r.Financing_Option__c, &quot;NYSERDA&quot;),
              CONTAINS( Sales_Order__r.Lease_PPA_Fund__r.Name, &quot;CT Lease Fund&quot;))
)), &quot;0. Rebate Reservation&quot;,

IF( AND( ISNULL( Lease_Contract_Submission__c ), ISNULL( Lease_Final_Package_Approved__c )), &quot;1. Contract Submission&quot;,

IF( AND( ISNULL( Lease_Contract_Approval__c ), NOT( ISNULL( Lease_Contract_Submission__c ) ) ), &quot;2. Contract Approval&quot;,

IF( AND( ISNULL( Lease_Design_Submitted__c ), NOT( ISNULL( Lease_Contract_Approval__c ) ) ), &quot;3. Design Submission&quot;,

IF( AND( ISNULL( Lease_Design__c ), NOT( ISNULL( Lease_Design_Submitted__c ) ) ), &quot;4. Design Approval&quot;,

IF( AND( ISNULL( Work_Completed__c ), NOT( ISNULL( Lease_Design__c ) ) ), &quot;5. Pending Work Complete&quot;,

IF( AND( ISNULL( Lease_Substantially_Submitted__c ), NOT( ISNULL( Work_Completed__c ) ) ), &quot;6. Substantial Submission&quot;,

IF( AND( ISNULL( Lease_Substantially_Complete__c ), NOT( ISNULL(  Lease_Substantially_Submitted__c ) ) ), &quot;7. Substantial Approval&quot;,

IF( AND( ISNULL( Lease_Final_Package_Submission__c ), NOT( ISNULL(  Lease_Substantially_Complete__c ) ) ), &quot;8. Final Submission&quot;,

IF( AND( ISNULL( Lease_Final_Package_Approved__c ), NOT( ISNULL(  Lease_Final_Package_Submission__c ) ) ), &quot;9. Final Approval&quot;,

IF( AND( NOT( ISNULL(  Lease_Final_Package_Approved__c ) ) ), &quot;10. Finance Complete&quot;,

&quot;&quot;)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Comments__c</fullName>
        <description>Comments related to the grant.</description>
        <inlineHelpText>Comments related to the grant.</inlineHelpText>
        <label>Grant Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Grant_Comp_Approved_Last_Updated_By__c</fullName>
        <label>Grant Comp Approved Last Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Comp_Approved_P2_Last_Updated_By__c</fullName>
        <label>Grant Comp Approved P2 Last Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Comp_Completed_Last_Updated_By__c</fullName>
        <label>Grant Comp Completed Last Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Comp_Signed_Last_Updated_By__c</fullName>
        <label>Grant Comp Signed Last Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Comp_Submitted_Last_Updated_By__c</fullName>
        <label>Grant Comp Submitted Last Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Comp_Submitted_P2_Last_Updated_By__c</fullName>
        <label>Grant Comp Submitted P2 Last Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Completion_Amount__c</fullName>
        <description>Grant Completion Amount</description>
        <inlineHelpText>Grant Completion Amount</inlineHelpText>
        <label>Grant Completion Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Completion_Approved_Part_2__c</fullName>
        <description>Approved Application Part 2</description>
        <inlineHelpText>Approved Application Part 2</inlineHelpText>
        <label>Grant Completion Approved Part 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Completion_Completed__c</fullName>
        <label>Grant Completion Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Completion_Signed__c</fullName>
        <label>Grant Completion Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Completion_Submitted_Part_2__c</fullName>
        <description>Submitted Application Part 2</description>
        <inlineHelpText>Submitted Application Part 2</inlineHelpText>
        <label>Grant Completion Submitted Part 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Completion_Submitted__c</fullName>
        <label>Grant Completion Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Completion__c</fullName>
        <label>Grant Completion Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Documents__c</fullName>
        <label>Grant Reservation Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Estimate_Sold__c</fullName>
        <description>Grant Estimate Sold</description>
        <inlineHelpText>Grant Estimate Sold</inlineHelpText>
        <label>Grant Estimate Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Payment_1_Amount__c</fullName>
        <label>Grant Payment 1 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Payment_1_Date__c</fullName>
        <label>Grant Payment 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Payment_2_Amount__c</fullName>
        <label>Grant Payment 2 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Payment_2_Date__c</fullName>
        <label>Grant Payment 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Res_Approved_Last_Updated_By__c</fullName>
        <label>Grant Res Approved Last Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Res_Completed_Last_Updated_By__c</fullName>
        <label>Grant Res Completed Last Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Res_Signed_Last_Updated_By__c</fullName>
        <label>Grant Res Signed Last Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Res_Submitted_Last_Updated_By__c</fullName>
        <label>Grant Res Submitted Last Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Reservation_Amount__c</fullName>
        <label>Grant Reservation Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Reservation_Completed__c</fullName>
        <label>Grant Reservation Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Reservation_Number__c</fullName>
        <label>Grant Reservation Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Reservation_Signed__c</fullName>
        <label>Grant Reservation Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Reservation_Submitted__c</fullName>
        <label>Grant Reservation Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Signatory_Email__c</fullName>
        <formula>Sales_Order__r.Property__r.Property_Owner__r.Grant_Signatory__r.Email</formula>
        <label>Grant Signatory Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Signatory_First_Name__c</fullName>
        <formula>Sales_Order__r.Property__r.Property_Owner__r.Grant_Signatory__r.FirstName</formula>
        <label>Grant Signatory First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Signatory_Last_Name__c</fullName>
        <formula>Sales_Order__r.Property__r.Property_Owner__r.Grant_Signatory__r.LastName</formula>
        <label>Grant Signatory Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Signatory_Phone__c</fullName>
        <formula>Sales_Order__r.Property__r.Property_Owner__r.Grant_Signatory__r.Phone</formula>
        <label>Grant Signatory Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_Submitted_Documents__c</fullName>
        <label>HOA Submitted Documents</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handoff_Big_Ticket_Electrical_Item__c</fullName>
        <description>Customer has any big ticket electrical equipment</description>
        <inlineHelpText>Customer has any big ticket electrical equipment</inlineHelpText>
        <label>Handoff Big Ticket Electrical Item</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handoff_Big_Ticket_Electrical_Type__c</fullName>
        <description>Type of big ticket electrical equipment</description>
        <inlineHelpText>Type of big ticket electrical equipment</inlineHelpText>
        <label>Handoff Big Ticket Electrical Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot tub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sauna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elevator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Handoff_Bridge_Installed__c</fullName>
        <description>Does customer have communication bridge installed?</description>
        <inlineHelpText>Does customer have communication bridge installed?</inlineHelpText>
        <label>Handoff Bridge Installed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handoff_Bridge_Model_Number__c</fullName>
        <description>Model number of communication bridge installed</description>
        <inlineHelpText>Model number of communication bridge installed</inlineHelpText>
        <label>Handoff Bridge Model Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handoff_Bridge_Type__c</fullName>
        <label>Handoff Bridge Type</label>
        <picklist>
            <picklistValues>
                <fullName>Powerline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Antenna Ubiquiti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Antenna Ubiquiti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handoff_Check_list_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Handoff Check list Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handoff_Checklist_Comments__c</fullName>
        <label>Handoff Checklist Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Handoff_Checklist_Completion_Date__c</fullName>
        <description>Handoff Checklist Completion Date</description>
        <inlineHelpText>Handoff Checklist Completion Date</inlineHelpText>
        <label>Handoff Checklist Completion Date</label>
        <type>Date</type>
    </fields>
</CustomObject>